lost a lot of time trying to make a user feedback on running detection
run detection running good and getting the output log